--- a/markup/_layouts/_content/_homepage/top5-manager.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager.jade
@@ -85,6 +85,7 @@ div.tab-content(id="top5-manager-content")
 												p 1
 											div.manager-thumbnail-name
 												p Rafael
+												p.orange 185 FP
 											div.points-in-bar
 												p.points 121 PTS
 							li.nav-item
@@ -97,6 +98,7 @@ div.tab-content(id="top5-manager-content")
 												p 2
 											div.manager-thumbnail-name
 												p Oscar
+												p.orange 185 FP
 											div.points-in-bar
 												p.points 121 PTS
 							li.nav-item
@@ -109,6 +111,7 @@ div.tab-content(id="top5-manager-content")
 												p 3
 											div.manager-thumbnail-name
 												p Dan
+												p.orange 185 FP
 											div.points-in-bar
 												p.points 121 PTS
 							li.nav-item
@@ -121,6 +124,7 @@ div.tab-content(id="top5-manager-content")
 												p 4
 											div.manager-thumbnail-name
 												p Nicholas
+												p.orange 185 FP
 											div.points-in-bar
 												p.points 121 PTS
 							li.nav-item
@@ -137,6 +141,7 @@ div.tab-content(id="top5-manager-content")
 												p 5
 											div.manager-thumbnail-name
 												p Anthony
+												p.orange 185 FP
 											div.points-in-bar
 												p.points 121 PTS
 
@@ -169,12 +174,6 @@ div.tab-content(id="top5-manager-content")
 																			h3 Score: 123
 																		div.col-12.no-padding
 																			h3 The best NLC2 team!!
-																	div.row 
-																		div.col-10
-																			#create-helmet.final-helmet(style='display: block;')
-																				img#helmet.helmet-img(src='assets/img/helmet/white-helmet.png', style='display: block;')
-																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
-																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 														.row
 															.col-12.no-padding
 																table.table.table-striped.nl-team-list-table
@@ -248,6 +247,7 @@ div.tab-content(id="top5-manager-content")
 															p 1
 														div.name
 															p Rafael
+															p.orange 123 FP
 							//- div.carousel-item
 							//- 	div.tab-content
 							//- 		div.tab-pane.active(id="manager1" role="tabpanel")
