--- a/markup/_layouts/_content/_homepage/top5-player.jade
+++ b/markup/_layouts/_content/_homepage/top5-player.jade
@@ -92,8 +92,7 @@ div.tab-content(id="top5-player-content")
 												p 1
 											div.player-thumbnail-name
 												p grownkowski
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 111 PTS
 							li.nav-item
 								a.active(href="" data-target="#carouselTop5Players" data-slide-to="1")
 									div.menu-item.top-5
@@ -104,8 +103,7 @@ div.tab-content(id="top5-player-content")
 												p 2
 											div.player-thumbnail-name
 												p beckham JR
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 118 PTS
 							li.nav-item
 								a.active(href="" data-target="#carouselTop5Players" data-slide-to="2")
 									div.menu-item.top-5
@@ -116,8 +114,7 @@ div.tab-content(id="top5-player-content")
 												p 3
 											div.player-thumbnail-name
 												p Ryan
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 121 PTS
 							li.nav-item
 								a.active(href="" data-target="#carouselTop5Players" data-slide-to="3")
 									div.menu-item.top-5
@@ -128,8 +125,7 @@ div.tab-content(id="top5-player-content")
 												p 4
 											div.player-thumbnail-name
 												p Rodgers
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 121 PTS
 							li.nav-item
 								a.active(href="" data-target="#carouselTop5Players" data-slide-to="4")
 									div.menu-item.top-5
@@ -140,8 +136,7 @@ div.tab-content(id="top5-player-content")
 												p 5
 											div.player-thumbnail-name
 												p Johnson
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 121 PTS
 						div.carousel-inner
 							div.carousel-item.active
 								div.new-top5-players-container
@@ -264,7 +259,7 @@ div.tab-content(id="top5-player-content")
 														td $0
 														td 765
 
-									div.new-news-player
+									div.new-news-player.hidden-xs-down
 										h5 Todd Gurley Bounces Back In Victory Over Jags
 										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
 										p
@@ -292,7 +287,7 @@ div.tab-content(id="top5-player-content")
 							//- 							p 2
 							//- 						div.name
 							//- 							p Odell Beckham JR.
-							//- 						p.points 121 PTS 
+							//- 						p.orange 121 PTS 
 							//- 				div.player-info
 							//- 					p FP points
 							//- 					h5 121.5
@@ -313,7 +308,7 @@ div.tab-content(id="top5-player-content")
 							//- 							p 3
 							//- 						div.name
 							//- 							p Matt Ryan
-							//- 						p.points 121 PTS 
+							//- 						p.orange 121 PTS 
 							//- 				div.player-info
 							//- 					p FP points
 							//- 					h5 121.5
@@ -334,7 +329,7 @@ div.tab-content(id="top5-player-content")
 							//- 							p 4
 							//- 						div.name
 							//- 							p Aaron Rodgers
-							//- 						p.points 121 PTS 
+							//- 						p.orange 121 PTS 
 							//- 				div.player-info
 							//- 					p FP points
 							//- 					h5 121.5
@@ -355,7 +350,7 @@ div.tab-content(id="top5-player-content")
 							//- 							p 5
 							//- 						div.name
 							//- 							p David Johnson
-							//- 						p.points 121 PTS 
+							//- 						p.orange 121 PTS 
 							//- 				div.player-info
 							//- 					p FP points
 							//- 					h5 121.5
