--- a/markup/_layouts/_content/homepage-content.jade
+++ b/markup/_layouts/_content/homepage-content.jade
@@ -13,7 +13,7 @@ section.nl-section.homepage.football-homepage
 
 
 		div.row.top-5-section
-			div.col-12.col-lg-6.col-xl-6.position
+			div.col-12.col-lg-6.col-xl-6.top5-player-container
 				include _homepage/top5-player
 			div.col-12.col-lg-6.col-xl-6.week
 				include _homepage/top5-manager
