--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -680,7 +680,7 @@
         bottom: 8.8%;
         left: 13%;
         img{
-          max-width: 75px;
+          //max-width: 75px;
         }
       }
     }
