--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -10397,6 +10397,104 @@ p {
 /*general for homepage*/
 .nl-section.homepage .container-fluid {
   max-width: 1650px; }
+  @media (min-width: 992px) {
+    .nl-section.homepage .container-fluid .row {
+      margin-right: 0;
+      margin-left: 0; } }
+
+.nl-section.homepage.football-homepage .nl-team-list .helmet-container {
+  position: relative;
+  width: 90px;
+  margin: 0 auto; }
+  .nl-section.homepage.football-homepage .nl-team-list .helmet-container .oval-letter {
+    position: absolute;
+    top: 14px;
+    left: 9px;
+    z-index: 1;
+    width: 33px; }
+    @media only screen and (min-width: 1367px) and (max-width: 1440px) {
+      .nl-section.homepage.football-homepage .nl-team-list .helmet-container .oval-letter {
+        top: 11px;
+        left: 15px;
+        width: 30px; } }
+    @media only screen and (min-width: 1201px) and (max-width: 1366px) {
+      .nl-section.homepage.football-homepage .nl-team-list .helmet-container .oval-letter {
+        top: 12px;
+        left: 18px;
+        z-index: 1;
+        width: 22px; } }
+    @media only screen and (min-width: 992px) and (max-width: 1200px) {
+      .nl-section.homepage.football-homepage .nl-team-list .helmet-container .oval-letter {
+        top: 8px;
+        left: 24px;
+        width: 22px; } }
+  .nl-section.homepage.football-homepage .nl-team-list .helmet-container img {
+    height: auto; }
+    .nl-section.homepage.football-homepage .nl-team-list .helmet-container img#oval {
+      position: absolute; }
+    .nl-section.homepage.football-homepage .nl-team-list .helmet-container img#letter {
+      position: absolute;
+      z-index: 2;
+      width: 41%;
+      margin-left: 9px;
+      margin-top: 3px; }
+      @media only screen and (min-width: 1201px) and (max-width: 1366px) {
+        .nl-section.homepage.football-homepage .nl-team-list .helmet-container img#letter {
+          margin-left: 7px; } }
+      @media only screen and (min-width: 992px) and (max-width: 1200px) {
+        .nl-section.homepage.football-homepage .nl-team-list .helmet-container img#letter {
+          margin-left: 7px; } }
+    .nl-section.homepage.football-homepage .nl-team-list .helmet-container img#helmet {
+      height: 90px;
+      width: auto;
+      margin: 0 auto; }
+
+.nl-section.homepage.football-homepage .nl-team-field .helmet-container {
+  position: relative;
+  width: 90px;
+  margin: 0 auto; }
+  .nl-section.homepage.football-homepage .nl-team-field .helmet-container .oval-letter {
+    position: absolute;
+    top: 14px;
+    left: 9px;
+    z-index: 1;
+    width: 33px; }
+    @media only screen and (min-width: 1367px) and (max-width: 1440px) {
+      .nl-section.homepage.football-homepage .nl-team-field .helmet-container .oval-letter {
+        top: 11px;
+        left: 15px;
+        width: 30px; } }
+    @media only screen and (min-width: 1201px) and (max-width: 1366px) {
+      .nl-section.homepage.football-homepage .nl-team-field .helmet-container .oval-letter {
+        top: 12px;
+        left: 18px;
+        z-index: 1;
+        width: 22px; } }
+    @media only screen and (min-width: 992px) and (max-width: 1200px) {
+      .nl-section.homepage.football-homepage .nl-team-field .helmet-container .oval-letter {
+        top: 8px;
+        left: 24px;
+        width: 22px; } }
+  .nl-section.homepage.football-homepage .nl-team-field .helmet-container img {
+    height: auto; }
+    .nl-section.homepage.football-homepage .nl-team-field .helmet-container img#oval {
+      position: absolute; }
+    .nl-section.homepage.football-homepage .nl-team-field .helmet-container img#letter {
+      position: absolute;
+      z-index: 2;
+      width: 41%;
+      margin-left: 9px;
+      margin-top: 3px; }
+      @media only screen and (min-width: 1201px) and (max-width: 1366px) {
+        .nl-section.homepage.football-homepage .nl-team-field .helmet-container img#letter {
+          margin-left: 7px; } }
+      @media only screen and (min-width: 992px) and (max-width: 1200px) {
+        .nl-section.homepage.football-homepage .nl-team-field .helmet-container img#letter {
+          margin-left: 7px; } }
+    .nl-section.homepage.football-homepage .nl-team-field .helmet-container img#helmet {
+      height: 90px;
+      width: auto;
+      margin: 0 auto; }
 
 .nl-section.homepage.football-homepage .player-info h5 {
   margin-bottom: 15px; }
@@ -10924,6 +11022,9 @@ p {
       width: 220px;
       margin: 0 auto;
       margin-top: 20px; }
+      @media (max-width: 1200px) {
+        .nl-section.homepage #top5-managers-picture .helmet-container, .nl-section.homepage #top5-players-picture .helmet-container {
+          width: 200px; } }
       .nl-section.homepage #top5-managers-picture .helmet-container .oval-letter, .nl-section.homepage #top5-players-picture .helmet-container .oval-letter {
         position: absolute;
         top: 36px;
@@ -10942,6 +11043,9 @@ p {
         height: 220px;
         width: auto;
         margin: 0 auto; }
+        @media (max-width: 1200px) {
+          .nl-section.homepage #top5-managers-picture .helmet-container img#helmet, .nl-section.homepage #top5-players-picture .helmet-container img#helmet {
+            height: 200px; } }
   .nl-section.homepage #top-manager {
     height: 200px;
     margin: 0 auto;
@@ -10956,7 +11060,7 @@ p {
         max-width: 200px; } }
     @media (min-width: 1200px) {
       .nl-section.homepage #top-manager {
-        height: 220px; } }
+        height: 200px; } }
   .nl-section.homepage .manager-image-inner {
     bottom: 28px; }
     @media (min-width: 1200px) {
@@ -13928,9 +14032,6 @@ td:nth-child(4).homepage-list-view {
     .nl-live-score .player-main-block.football .nl-DEF-position {
       bottom: 8.8%;
       left: 13%; }
-      .nl-create-team .player-main-block.football .nl-DEF-position img,
-      .nl-live-score .player-main-block.football .nl-DEF-position img {
-        max-width: 75px; }
 
 .nl-create-team .nl-team-field,
 .nl-live-score .nl-team-field {
